Phase5/negative_tests/prog15.dlp
//Missing main function

int myFunction() {
    return 5;
}

int not_main() {
    return 0;
}